--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,77 @@
     "tailwind.config.ts"
   ],
   "main": "nuxt.config.ts",
+  "dependencies": {
+    "@dargmuesli/nuxt-cookie-control": "7.1.1",
+    "@heroicons/vue": "2.0.18",
+    "@http-util/status-i18n": "0.8.1",
+    "@nuxt/devtools": "1.0.0",
+    "@nuxt/image": "1.0.0",
+    "@nuxtjs/color-mode": "3.3.0",
+    "@nuxtjs/html-validator": "1.5.2",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28319130.4a511e8",
+    "@nuxtjs/tailwindcss": "6.9.4",
+    "@nuxtseo/module": "2.0.0-beta.39",
+    "@pinia/nuxt": "0.5.1",
+    "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/typography": "0.5.10",
+    "@vuelidate/core": "2.0.3",
+    "@vuelidate/validators": "2.0.4",
+    "clipboardy": "4.0.0",
+    "dayjs": "2.0.0-alpha.4",
+    "nuxt-security": "1.0.0-rc.2",
+    "sweetalert2": "11.9.0",
+    "vue-gtag": "2.0.1"
+  },
+  "devDependencies": {
+    "@axe-core/playwright": "4.8.1",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
+    "@nuxtjs/eslint-config-typescript": "12.1.0",
+    "@playwright/test": "1.39.0",
+    "@types/lodash-es": "4.17.10",
+    "@unhead/vue": "1.8.3",
+    "@urql/core": "4.1.4",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-graphcache": "6.3.3",
+    "@urql/vue": "1.1.2",
+    "consola": "3.2.3",
+    "cookie-es": "1.0.0",
+    "cross-env": "7.0.3",
+    "defu": "6.1.3",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-compat": "4.2.0",
+    "eslint-plugin-nuxt": "4.0.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-yml": "1.10.0",
+    "h3": "1.8.2",
+    "jiti": "1.21.0",
+    "jose": "5.1.0",
+    "lint-staged": "15.0.2",
+    "lodash-es": "4.17.21",
+    "nuxt": "3.8.1",
+    "ofetch": "1.3.3",
+    "pinia": "2.1.7",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.6",
+    "serve": "14.2.1",
+    "stylelint": "15.11.0",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-no-unsupported-browser-features": "7.0.0",
+    "tailwindcss": "3.3.5",
+    "ufo": "1.3.1",
+    "unhead": "1.8.3",
+    "vue": "3.3.8",
+    "vue-router": "4.2.5",
+    "vue-tsc": "1.8.22"
+  },
+  "peerDependencies": {
+    "playwright-core": "1.39.0",
+    "nuxt": "3.8.1",
+    "vue": "3.3.8",
+    "vue-router": "4.2.5"
+  },
   "scripts": {
     "build": "pnpm run build:node",
     "build:node": "nuxt build .playground",
@@ -46,7 +117,6 @@
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
-    "prepare": "nuxt prepare .playground",
     "preview": "nuxt preview .playground",
     "start:dev": "nuxt dev .playground",
     "start:node": "node .playground/.output/server/index.mjs",
@@ -65,72 +135,5 @@
     "test:e2e:server:node": "cross-env NODE_ENV=production NUXT_PUBLIC_I18N_BASE_URL=http://localhost:3001 NUXT_PUBLIC_SITE_URL=http://localhost:3001 PORT=3001 VIO_SERVER=node pnpm run test:e2e",
     "test:e2e:server:static": "cross-env NODE_ENV=production PORT=3002 SITE_URL=http://localhost:3002 VIO_SERVER=static pnpm run test:e2e",
     "test:e2e": "playwright test"
-  },
-  "devDependencies": {
-    "@axe-core/playwright": "4.8.1",
-    "@dargmuesli/nuxt-cookie-control": "7.1.1",
-    "@heroicons/vue": "2.0.18",
-    "@http-util/status-i18n": "0.8.1",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
-    "@nuxt/devtools": "1.0.0",
-    "@nuxt/image": "1.0.0",
-    "@nuxtjs/color-mode": "3.3.0",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
-    "@nuxtjs/html-validator": "1.5.2",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28319130.4a511e8",
-    "@nuxtjs/tailwindcss": "6.9.4",
-    "@nuxtseo/module": "2.0.0-beta.39",
-    "@pinia/nuxt": "0.5.1",
-    "@playwright/test": "1.39.0",
-    "@tailwindcss/forms": "0.5.6",
-    "@tailwindcss/typography": "0.5.10",
-    "clipboardy": "4.0.0",
-    "@types/lodash-es": "4.17.10",
-    "@unhead/vue": "1.8.3",
-    "@urql/core": "4.1.4",
-    "@urql/devtools": "2.0.3",
-    "@urql/exchange-graphcache": "6.3.3",
-    "@urql/vue": "1.1.2",
-    "@vuelidate/core": "2.0.3",
-    "@vuelidate/validators": "2.0.4",
-    "consola": "3.2.3",
-    "cookie-es": "1.0.0",
-    "cross-env": "7.0.3",
-    "dayjs": "2.0.0-alpha.4",
-    "defu": "6.1.3",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-yml": "1.10.0",
-    "h3": "1.8.2",
-    "jiti": "1.21.0",
-    "jose": "5.1.0",
-    "lint-staged": "15.0.2",
-    "lodash-es": "4.17.21",
-    "nuxt": "3.8.1",
-    "nuxt-security": "1.0.0-rc.2",
-    "ofetch": "1.3.3",
-    "pinia": "2.1.7",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.6",
-    "serve": "14.2.1",
-    "stylelint": "15.11.0",
-    "stylelint-config-recommended-vue": "1.5.0",
-    "stylelint-config-standard": "34.0.0",
-    "stylelint-no-unsupported-browser-features": "7.0.0",
-    "sweetalert2": "11.9.0",
-    "tailwindcss": "3.3.5",
-    "ufo": "1.3.1",
-    "unhead": "1.8.3",
-    "vue": "3.3.8",
-    "vue-gtag": "2.0.1",
-    "vue-router": "4.2.5",
-    "vue-tsc": "1.8.22"
-  },
-  "peerDependencies": {
-    "playwright-core": "1.39.0",
-    "nuxt": "3.8.1"
   }
 }
