--- a/src/package.json
+++ b/src/package.json
@@ -43,7 +43,7 @@
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28331496.3c75cf9",
     "@nuxtjs/tailwindcss": "6.9.4",
-    "@nuxtseo/module": "2.0.0-beta.39",
+    "@nuxtseo/module": "2.0.0-beta.42",
     "@pinia/nuxt": "0.5.1",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
@@ -92,7 +92,7 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.5",
     "ufo": "1.3.2",
-    "unhead": "1.8.0-beta.2",
+    "unhead": "1.8.3",
     "vue": "3.3.8",
     "vue-router": "4.2.5",
     "vue-tsc": "1.8.22"
