--- a/src/package.json
+++ b/src/package.json
@@ -63,7 +63,7 @@
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@playwright/test": "1.39.0",
-    "@unhead/vue": "1.8.3",
+    "@unhead/vue": "1.8.0-beta.2",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "6.3.3",
     "@urql/vue": "1.1.2",
@@ -92,14 +92,14 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.5",
     "ufo": "1.3.1",
-    "unhead": "1.8.3",
+    "unhead": "1.8.0-beta.2",
     "vue": "3.3.8",
     "vue-router": "4.2.5",
     "vue-tsc": "1.8.22"
   },
   "peerDependencies": {
-    "playwright-core": "1.39.0",
     "nuxt": "3.8.1",
+    "playwright-core": "1.39.0",
     "vue": "3.3.8",
     "vue-router": "4.2.5"
   },
