--- a/src/package.json
+++ b/src/package.json
@@ -41,7 +41,7 @@
     "@nuxt/image": "1.1.0",
     "@nuxtjs/color-mode": "3.3.2",
     "@nuxtjs/html-validator": "1.5.2",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.6-28355705.5033681",
+    "@nuxtjs/i18n": "8.0.0-rc.6",
     "@nuxtjs/tailwindcss": "6.10.1",
     "@nuxtseo/module": "2.0.0-beta.45",
     "@pinia/nuxt": "0.5.1",
