--- a/src/package.json
+++ b/src/package.json
@@ -34,7 +34,7 @@
   ],
   "main": "nuxt.config.ts",
   "dependencies": {
-    "@dargmuesli/nuxt-cookie-control": "7.2.2",
+    "@dargmuesli/nuxt-cookie-control": "8.0.0-beta.1",
     "@heroicons/vue": "2.1.1",
     "@http-util/status-i18n": "0.8.1",
     "@nuxt/devtools": "1.0.6",
