--- a/src/package.json
+++ b/src/package.json
@@ -42,8 +42,8 @@
     "@nuxtjs/color-mode": "3.3.2",
     "@nuxtjs/html-validator": "1.6.0",
     "@nuxtjs/i18n": "8.0.0",
+    "@nuxtjs/seo": "2.0.0-rc.3",
     "@nuxtjs/tailwindcss": "6.10.3",
-    "@nuxtseo/module": "2.0.0-beta.55",
     "@pinia/nuxt": "0.5.1",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
