--- a/src/package.json
+++ b/src/package.json
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@axe-core/playwright": "4.9.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.11",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
+    "@nuxt/eslint": "0.3.7",
     "@playwright/test": "1.43.1",
     "@unhead/vue": "1.9.5",
     "@urql/devtools": "2.0.3",
@@ -71,12 +71,12 @@
     "cookie-es": "1.1.0",
     "cross-env": "7.0.3",
     "defu": "6.1.4",
-    "eslint": "8.57.0",
+    "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-yml": "1.14.0",
+    "globals": "15.0.0",
     "h3": "1.11.1",
     "jiti": "1.21.0",
     "lint-staged": "15.2.2",
@@ -111,12 +111,12 @@
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
-    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --cache .",
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
-    "prepare": "nuxt prepare .playground",
+    "prepare": "nuxt prepare && nuxt prepare .playground",
     "preview": "nuxt preview .playground",
     "start:dev": "nuxt dev .playground",
     "start:node": "node .playground/.output/server/index.mjs",
