--- a/src/.lintstagedrc
+++ b/src/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{js,ts,vue}": "eslint",
-  "*.{css,vue}": "stylelint"
+  "*.{js,json,ts,vue}": "pnpm run lint:js",
+  "*.{ts,vue}": "pnpm run lint:ts",
+  "*.{css,vue}": "pnpm run lint:style"
 }
