--- a/src/package.json
+++ b/src/package.json
@@ -112,7 +112,7 @@
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
-    "lint:js": "eslint --cache .",
+    "lint:js": "eslint --cache",
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
