--- a/.renovaterc
+++ b/.renovaterc
@@ -2,5 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>dargmuesli/renovate-config"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": ["@nuxtjs/i18n"],
+      "allowedVersions": "8.3.0"
+    }
   ]
 }
