--- a/src/package.json
+++ b/src/package.json
@@ -87,6 +87,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
     "serve": "14.2.3",
+    "sharp": "0.33.3",
     "stylelint": "16.5.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "36.0.0",
