--- a/src/package.json
+++ b/src/package.json
@@ -96,7 +96,8 @@
     "ufo": "1.5.3",
     "unhead": "1.9.12",
     "vue": "3.4.27",
-    "vue-router": "4.3.3"
+    "vue-router": "4.3.3",
+    "vue-tsc": "2.0.21"
   },
   "peerDependencies": {
     "nuxt": "3.12.1",
