--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,9 @@
   "eslint.workingDirectories": [
     {
       "directory": "src" // needed to correctly lint global locale strings like `t('globalStatusLoading')`
+    },
+    {
+      "directory": "tests"
     }
   ],
   "shellcheck.customArgs": ["-x"],
