--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,7 @@
     "globals": "15.6.0",
     "jose": "5.6.2",
     "nuxt-gtag": "2.0.6",
-    "nuxt-security": "1.4.3",
+    "nuxt-security": "2.0.0-rc.7",
     "sweetalert2": "11.12.0",
     "vue-tsc": "2.0.22"
   },
