--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "10.1.0",
+    "@semantic-release/github": "10.1.1",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.1",
-    "husky": "9.0.11",
+    "husky": "9.1.1",
     "lint-staged": "15.2.7",
     "semantic-release": "24.0.0"
   },
@@ -35,7 +35,7 @@
   "type": "module",
   "pnpm": {
     "overrides": {
-      "nuxt": "3.12.2",
+      "@nuxtjs/i18n": "8.3.0",
       "typescript": "5.4.5"
     }
   }
