--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "pnpm --dir src run build",
     "build:node": "pnpm --dir src run build:node",
     "build:static": "pnpm --dir src run build:static",
+    "build:static:test": "pnpm --dir src run build:static:test",
     "dev": "pnpm --dir src run dev",
     "generate": "pnpm --dir src run generate",
     "prepare": "husky",
