--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build:static:test": "pnpm --dir src run build:static:test",
     "dev": "pnpm --dir src run dev",
     "generate": "pnpm --dir src run generate",
+    "lint": "pnpm -r run lint",
     "prepare": "husky",
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
