--- a/src/package.json
+++ b/src/package.json
@@ -4,9 +4,9 @@
     "@eslint/compat": "1.2.3",
     "@heroicons/vue": "2.1.5",
     "@http-util/status-i18n": "0.8.1",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
-    "@nuxt/devtools": "1.6.0",
-    "@nuxt/eslint": "0.7.0",
+    "@intlify/eslint-plugin-vue-i18n": "4.0.0-next.0",
+    "@nuxt/devtools": "1.6.3",
+    "@nuxt/eslint": "0.7.2",
     "@nuxt/image": "1.8.1",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/html-validator": "1.8.2",
