--- a/.renovaterc
+++ b/.renovaterc
@@ -9,6 +9,12 @@
         "@pinia/nuxt"
       ],
       "allowedVersions": "0.5.5"
+    },
+    {
+      "matchPackageNames": [
+        "typescript"
+      ],
+      "allowedVersions": "5.6.3"
     }
   ]
 }
