--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,6 +6,12 @@
   "packageRules": [
     {
       "matchPackageNames": [
+        "nuxt-og-image"
+      ],
+      "allowedVersions": "4.0.1"
+    },
+    {
+      "matchPackageNames": [
         "typescript"
       ],
       "allowedVersions": "5.6.3"
