--- a/src/package.json
+++ b/src/package.json
@@ -53,7 +53,7 @@
     "sharp": "0.33.5",
     "stylelint": "16.13.1",
     "stylelint-config-recommended-vue": "1.5.0",
-    "stylelint-config-standard": "36.0.1",
+    "stylelint-config-standard": "37.0.0",
     "stylelint-no-unsupported-browser-features": "8.0.2",
     "tailwindcss": "3.4.17",
     "unhead": "1.11.16",
@@ -116,5 +116,5 @@
     "start:static": "serve .playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
   },
   "type": "module",
-  "version": "15.1.1"
+  "version": "16.0.0-beta.1"
 }
