--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>dargmuesli/renovate-config"
-  ],
+  "extends": ["github>dargmuesli/renovate-config"],
   "packageRules": [
     {
-      "matchPackageNames": [
-        "nuxt-og-image"
-      ],
+      "matchPackageNames": ["@nuxtjs/tailwindcss"],
+      "allowedVersions": "6.12.2"
+    },
+    {
+      "matchPackageNames": ["nuxt-og-image"],
       "allowedVersions": "4.0.1"
     }
   ]
