--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "semantic-release": "24.2.1"
   },
   "packageManager": "pnpm@9.15.4",
+  "pnpm": {
+    "overrides": {
+      "@nuxtjs/i18n": "9.1.1"
+    }
+  },
   "private": true,
   "scripts": {
     "build": "pnpm --dir src run build",
