--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,6 @@
     "@nuxtjs/html-validator": "1.8.2",
     "@nuxtjs/i18n": "9.1.1",
     "@nuxtjs/seo": "2.1.1",
-    "@nuxtjs/tailwindcss": "6.13.1",
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/typography": "0.5.16",
@@ -37,6 +36,7 @@
     "vue-tsc": "2.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "4.0.6",
     "@unhead/vue": "1.11.19",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "7.2.2",
@@ -80,8 +80,7 @@
     "error.vue",
     "i18n.config.ts",
     "nuxt.config.ts",
-    "package.json",
-    "tailwind.config.ts"
+    "package.json"
   ],
   "main": "nuxt.config.ts",
   "name": "@dargmuesli/nuxt-vio",
