--- a/src/package.json
+++ b/src/package.json
@@ -12,10 +12,10 @@
     "@nuxtjs/html-validator": "1.8.2",
     "@nuxtjs/i18n": "9.1.1",
     "@nuxtjs/seo": "2.1.1",
-    "@nuxtjs/tailwindcss": "6.13.1",
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/typography": "0.5.16",
+    "@tailwindcss/vite": "4.0.6",
     "@types/lodash-es": "4.17.12",
     "@urql/core": "5.1.0",
     "@urql/vue": "1.4.2",
@@ -55,7 +55,7 @@
     "stylelint-config-recommended-vue": "1.6.0",
     "stylelint-config-standard": "37.0.0",
     "stylelint-no-unsupported-browser-features": "8.0.4",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.6",
     "unhead": "1.11.19",
     "vue": "3.5.13",
     "vue-router": "4.5.0"
@@ -80,8 +80,7 @@
     "error.vue",
     "i18n.config.ts",
     "nuxt.config.ts",
-    "package.json",
-    "tailwind.config.ts"
+    "package.json"
   ],
   "main": "nuxt.config.ts",
   "name": "@dargmuesli/nuxt-vio",
@@ -104,12 +103,12 @@
     "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
+    "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
     "lint:js": "eslint --cache",
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
-    "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
     "prepare": "nuxt prepare && nuxt prepare .playground && ./.config/certificates/mkcert.sh",
     "preview": "nuxt preview .playground",
     "start": "pnpm run start:node",
@@ -118,5 +117,5 @@
     "start:static": "serve .playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
   },
   "type": "module",
-  "version": "16.0.5"
+  "version": "17.0.0-beta.5"
 }
