--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   },
   "packageManager": "pnpm@10.4.1",
   "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "sharp",
+      "vue-demi"
+    ],
     "overrides": {
       "@nuxtjs/i18n": "9.1.1",
       "vue-tsc": "2.2.0"
