--- a/src/package.json
+++ b/src/package.json
@@ -37,6 +37,7 @@
     "vue-tsc": "2.2.8"
   },
   "devDependencies": {
+    "@types/node": "22.13.10",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "7.2.3",
     "consola": "3.4.2",
@@ -66,6 +67,7 @@
     "i18n",
     "server",
     "shared",
+    "node.ts",
     "nuxt.config.ts",
     "package.json"
   ],
