--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "pnpm": {
     "ignoredBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
+      "unrs-resolver",
       "vue-demi"
     ]
   },
