--- a/src/package.json
+++ b/src/package.json
@@ -74,9 +74,9 @@
   "main": "nuxt.config.ts",
   "name": "@dargmuesli/nuxt-vio",
   "peerDependencies": {
-    "nuxt": "4.1.0",
-    "vue": "3.5.21",
-    "vue-router": "4.5.1"
+    "nuxt": "^4.1.0",
+    "vue": "^3.5.21",
+    "vue-router": "^4.5.1"
   },
   "publishConfig": {
     "access": "public"
