--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,6 @@
     "@nuxt/image": "1.11.0",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/html-validator": "2.1.0",
-    "@nuxtjs/i18n": "10.0.6",
     "@nuxtjs/seo": "3.1.0",
     "@pinia/nuxt": "0.11.2",
     "@tailwindcss/forms": "0.5.10",
@@ -37,6 +36,7 @@
     "vue-tsc": "3.0.6"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "10.0.6",
     "@types/node": "22.18.1",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "8.1.0",
@@ -74,6 +74,7 @@
   "main": "nuxt.config.ts",
   "name": "@dargmuesli/nuxt-vio",
   "peerDependencies": {
+    "@nuxtjs/i18n": "^10.0.6",
     "nuxt": "^4.1.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
