--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,19 +29,19 @@ jobs:
   release_semantic_dry:
     needs: prepare_jobs
     name: Release (semantic, dry)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@2.7.0
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0-beta.3
     if: contains(fromJSON('["beta", "alpha"]'), github.ref_name) || needs.prepare_jobs.outputs.pr_found == 'false' || github.event_name == 'pull_request'
     permissions:
       contents: write
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     with:
       APT_PACKAGES: mkcert
       DRY_RUN: true
+      INSTALL_NODE_DEPENDENCIES: true
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@2.7.0
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@3.0.0-beta.3
     needs: release_semantic_dry
     permissions:
       packages: write
@@ -51,11 +51,11 @@ jobs:
   release_semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@2.7.0
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0-beta.3
     permissions:
       contents: write
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     with:
       APT_PACKAGES: mkcert
+      INSTALL_NODE_DEPENDENCIES: true
