--- a/.github/workflows/release-schedule.yml
+++ b/.github/workflows/release-schedule.yml
@@ -1,7 +1,6 @@
 name: "Release: Scheduled"
 
-permissions:
-  contents: read
+permissions: {}
 
 on:
   schedule:
@@ -11,7 +10,9 @@ on:
 jobs:
   release-schedule:
     name: "Release: Scheduled"
-    uses: dargmuesli/github-actions/.github/workflows/release-schedule.yml@3.0.0-beta.3
+    uses: dargmuesli/github-actions/.github/workflows/release-schedule.yml@3.0.0-beta.6
+    permissions:
+      contents: read
     secrets:
       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     with:
