--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,14 @@ on:
 jobs:
   ci-optimization:
     name: CI optimization
-    uses: dargmuesli/github-actions/.github/workflows/ci-optimization.yml@3.0.0-beta.6
+    uses: dargmuesli/github-actions/.github/workflows/ci-optimization.yml@3.0.0
     permissions:
       pull-requests: read
   release_semantic_dry:
     needs: ci-optimization
     if: contains(fromJSON('["beta", "alpha"]'), github.ref_name) || needs.ci-optimization.outputs.continue == 'true'
     name: Release (semantic, dry)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0-beta.6
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0
     permissions:
       contents: write
       id-token: write
@@ -33,7 +33,7 @@ jobs:
       INSTALL_NODE_DEPENDENCIES: true
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@3.0.0-beta.6
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@3.0.0
     needs: release_semantic_dry
     permissions:
       packages: write
@@ -43,7 +43,7 @@ jobs:
   release_semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0-beta.6
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@3.0.0
     permissions:
       contents: write
       id-token: write
