--- a/src/package.json
+++ b/src/package.json
@@ -22,7 +22,6 @@
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
     "clipboardy": "5.0.0",
-    "dayjs": "2.0.0-alpha.4",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-compat": "6.0.2",
@@ -40,6 +39,7 @@
     "@types/node": "24.10.0",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "8.1.0",
+    "@vueuse/core": "14.0.0",
     "consola": "3.4.2",
     "defu": "6.1.4",
     "h3": "1.15.4",
@@ -48,6 +48,7 @@
     "pinia": "3.0.4",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
+    "reka-ui": "2.6.0",
     "serve": "14.2.5",
     "sharp": "0.34.5",
     "stylelint": "16.25.0",
