--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,10 @@
     "@urql/vue": "2.0.0",
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
+    "@vueuse/core": "14.0.0",
+    "class-variance-authority": "0.7.1",
     "clipboardy": "5.0.1",
+    "clsx": "2.1.1",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-compat": "6.0.2",
@@ -30,9 +33,13 @@
     "globals": "16.5.0",
     "jiti": "2.6.1",
     "jose": "6.1.2",
+    "lucide-vue-next": "0.554.0",
     "nuxt-gtag": "4.1.0",
     "nuxt-security": "2.5.0",
-    "sweetalert2": "11.26.3",
+    "shadcn-nuxt": "2.3.3",
+    "tailwind-merge": "3.4.0",
+    "tw-animate-css": "1.4.0",
+    "vue-sonner": "2.0.9",
     "vue-tsc": "3.1.5"
   },
   "devDependencies": {
