--- a/src/package.json
+++ b/src/package.json
@@ -94,9 +94,8 @@
   },
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "nuxt build playground",
-    "build:static": "nuxt generate playground",
-    "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
+    "build:node": "NUXT_PUBLIC_SITE_URL=https://localhost:3001 nuxt build playground",
+    "build:static": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 nuxt generate playground",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
@@ -109,7 +108,7 @@
     "preview": "nuxt preview playground",
     "start": "pnpm run start:node",
     "start:dev": "nuxt dev playground",
-    "start:node": "node playground/.output/server/index.mjs",
+    "start:node": "node scripts/server.mjs",
     "start:static": "serve playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
   },
   "type": "module",
