--- a/src/package.json
+++ b/src/package.json
@@ -98,9 +98,8 @@
   },
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "nuxt build playground",
-    "build:static": "nuxt generate playground",
-    "build:static:test": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 pnpm run build:static",
+    "build:node": "NUXT_PUBLIC_SITE_URL=https://localhost:3001 nuxt build playground",
+    "build:static": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 nuxt generate playground",
     "certificates": ".config/certificates/mkcert.sh",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
@@ -110,7 +109,7 @@
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
-    "prepare": "nuxt prepare && nuxt prepare playground && ./.config/certificates/mkcert.sh",
+    "postinstall": "nuxt prepare && nuxt prepare playground",
     "preview": "nuxt preview playground",
     "start": "pnpm run start:node",
     "start:dev": "pnpm run certificates && NODE_EXTRA_CA_CERTS=\"$(mkcert -CAROOT)/rootCA.pem\" nuxt dev playground",
