--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -3,6 +3,10 @@
   "extends": ["github>dargmuesli/renovate-config"],
   "packageRules": [
     {
+      "allowedVersions": "7.4.7",
+      "matchPackageNames": ["@nuxtjs/sitemap"]
+    },
+    {
       "allowedVersions": "5.1.12",
       "matchPackageNames": ["nuxt-og-image"]
     }
