--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
     "@commitlint/cli": "20.3.1",
     "@commitlint/config-conventional": "20.3.1",
     "@dargmuesli/nuxt-vio": "link:src",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.2",
-    "@semantic-release/npm": "13.1.3",
-    "@semantic-release/release-notes-generator": "14.1.0",
     "husky": "9.1.7",
-    "lint-staged": "16.2.7",
-    "semantic-release": "25.0.2"
+    "lint-staged": "16.2.7"
   },
   "packageManager": "pnpm@10.28.0",
   "pnpm": {
