--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,10 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>dargmuesli/renovate-config"],
-  "packageRules": [
-    {
-      "allowedVersions": "5.1.13",
-      "matchPackageNames": ["nuxt-og-image"]
-    }
-  ]
+  "extends": ["github>dargmuesli/renovate-config"]
 }
