--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
     "@dargmuesli/nuxt-cookie-control": "9.1.13",
     "@eslint/compat": "2.0.1",
     "@heroicons/vue": "2.2.0",
+    "@nuxtjs/turnstile": "1.1.1",
     "@http-util/status-i18n": "0.9.0",
     "@intlify/eslint-plugin-vue-i18n": "4.1.1",
     "@nuxt/devtools": "3.1.1",
