--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,7 @@
     "jiti": "2.6.1",
     "jose": "6.1.3",
     "lucide-vue-next": "0.562.0",
+    "nodemailer": "7.0.13",
     "nuxt-gtag": "4.1.0",
     "nuxt-security": "2.5.1",
     "reka-ui": "2.7.0",
@@ -45,6 +46,7 @@
     "vue-tsc": "3.2.2"
   },
   "devDependencies": {
+    "@types/nodemailer": "7.0.9",
     "@types/node": "24.10.9",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "9.0.0",
