--- a/src/package.json
+++ b/src/package.json
@@ -100,7 +100,7 @@
     "build": "pnpm run build:node",
     "build:node": "nuxt build playground",
     "build:static": "nuxt generate playground",
-    "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
+    "build:static:test": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 pnpm run build:static",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
