--- a/src/package.json
+++ b/src/package.json
@@ -101,6 +101,7 @@
     "build:node": "nuxt build playground",
     "build:static": "nuxt generate playground",
     "build:static:test": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 pnpm run build:static",
+    "certificates": ".config/certificates/mkcert.sh",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
@@ -112,9 +113,9 @@
     "prepare": "nuxt prepare && nuxt prepare playground && ./.config/certificates/mkcert.sh",
     "preview": "nuxt preview playground",
     "start": "pnpm run start:node",
-    "start:dev": "nuxt dev playground",
-    "start:node": "node playground/.output/server/index.mjs",
-    "start:static": "serve playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
+    "start:dev": "pnpm run certificates && NODE_EXTRA_CA_CERTS=\"$(mkcert -CAROOT)/rootCA.pem\" nuxt dev playground",
+    "start:node": "node scripts/server/node.mjs",
+    "start:static": "node scripts/server/static.mjs"
   },
   "type": "module",
   "version": "20.5.2"
