--- a/src/package.json
+++ b/src/package.json
@@ -55,7 +55,7 @@
     "defu": "6.1.4",
     "h3": "1.15.5",
     "lodash-es": "4.17.23",
-    "nuxt": "https://pkg.pr.new/nuxt@34210",
+    "nuxt": "4.3.1",
     "pinia": "3.0.4",
     "prettier": "3.8.1",
     "prettier-plugin-tailwindcss": "0.7.2",
